2009-02-25  Esteban Sanchez  <estebans@artica.es>

	* include/functions_db.php: Added database debug support. If the debug
	flag in config is set, a table with all the queries done in a page is
	shown. To do so, add_database_debug_trace() and print_database_debug()
	were added.

	* include/functions_ui.php: Added debug() function which shows a
	given variable content and a traceback which can be toggled to make
	developers life easier.

	* index.php: Print database debug table.

	* include/styles/pandora.css: Styles for debug functionallity.

2009-02-24  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* include/functions_db.php: Fixed where clause
	
	* images/groups_small/printer.png: Added printer icon to groups since
	it might be useful to create a separate printer group

2009-02-24  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* include/config_process.php: Added compact_header. If you want to
	save on server hits and increase performance (slightly) enable it.
	Page loads (on my system) ~500ms faster and feels faster since it 
	doesn't block the page while waiting on css and javascript

	* include/functions_agents.php: Moved process_manage_config from 
	configurar_agente.
	
	* include/functions_ui.php: Added compact_header functionality
	
	* include/functions_html.php: Fixed some id issues which caused
	manage_config to not work correctly. id's can't have [] in them.
	Also fixed the comparison for numeric (string to int) comparisons
	
	* include/styles/pandora.css: Moved @import to functions_ui.php
	
	* godmode/agentes/manage_config.php: Fixed ids and some validation
	
	* godmode/agentes/configurar_agente.php, godmode/agentes/agent_manager:
	Fixed HTML output and use functions for images
	
	* godmode/setup/setup.php: Added compact_header to setup

2009-02-24  Esteban Sanchez  <estebans@artica.es>

	* include/functions_db.php: Fixed a bug in
	format_array_to_where_clause_sql() when only offset and limit where