@@ -1,5 +1,16 @@
 2009-02-25  Esteban Sanchez  <estebans@artica.es>
 
+	* include/functions_db.php: Do not show errors on sql_error_handler()
+	if debug flag is active. Removed return flag to print_database_debug()
+	because it was causing memory allocation errors. For the same reason,
+	the table is printed each 100 elements.
+	
+	* index.php: Run print_database_debug() after the flush.
+
+	* include/functions.php: Removed deprecated pandora_debug()
+
+2009-02-25  Esteban Sanchez  <estebans@artica.es>
+
 	* include/functions_db.php: Added database debug support. If the debug
 	flag in config is set, a table with all the queries done in a page is
 	shown. To do so, add_database_debug_trace() and print_database_debug()
